--- a/core/_helpers.scss
+++ b/core/_helpers.scss
@@ -32,16 +32,16 @@
 /// Convert pixels to baseline values
 /// @group Base-Base
 /// @param  {Pixels} $px Font size
-/// @param  {Pixels} $lh [$base-line-height] Base line height
+/// @param  {Pixels} $lh [$baseline-height] Base line height
 /// @return {float} Number of base lines this pixel value represents
 ///
-@function px2bl($px, $lh: $base-line-height){
+@function px2bl($px, $lh: $baseline-height){
     @return $px/$lh;
 }
 
 /// @alias px2bl
 /// @group Base-Base
-@function p2b($px, $lh: $base-line-height){
+@function p2b($px, $lh: $baseline-height){
     @return px2bl($px, $lh);
 }
 
@@ -50,17 +50,17 @@
 /// @group Base-Base
 /// @param  {Baselines} $base-lines Font size
 /// @param  {Pixels} $base-font-size [$base-font-size] Base font size
-/// @param  {Pixels} $base-line-height [$base-line-height] Baseline height
+/// @param  {Pixels} $baseline-height [$baseline-height] Baseline height
 /// @return {rem} Number of rem units this baseline value represents
 ///
-@function baseline2rem($base-lines, $base-font-size: $base-font-size, $base-line-height: $base-line-height){
-    @return $base-lines * $base-line-height / $base-font-size * 1rem;
+@function baseline2rem($base-lines, $base-font-size: $base-font-size, $baseline-height: $baseline-height){
+    @return $base-lines * $baseline-height / $base-font-size * 1rem;
 }
 
 /// @alias baseline2rem
 /// @group Base-Base
-@function b2r($base-lines, $base-font-size: $base-font-size, $base-line-height: $base-line-height){
-    @return baseline2rem($base-lines, $base-font-size: $base-font-size, $base-line-height: $base-line-height);
+@function b2r($base-lines, $base-font-size: $base-font-size, $baseline-height: $baseline-height){
+    @return baseline2rem($base-lines, $base-font-size: $base-font-size, $baseline-height: $baseline-height);
 }
 
 ///
