--- a/core/_variables.scss
+++ b/core/_variables.scss
@@ -1,6 +1,6 @@
 $fallback-font-stack: Helvetica, Arial, Sans-Serif !default;
 $default-font-family: "Open Sans" !default;
-$base-line-height: 14px !default;
+$baseline-height: 14px !default;
 $base-font-size: 16px !default;
 $visual-grid: true !default;
 $min-line-height-gap: 1px !default;
