--- a/core/font-settings/_all.scss
+++ b/core/font-settings/_all.scss
@@ -1,3 +1,11 @@
 /** This is a dynamically generated file **/
 
+@import "_lato.scss";
+@import "_montserrat.scss";
+@import "_open-sans-condensed.scss";
 @import "_open-sans.scss";
+@import "_oswald.scss";
+@import "_pt-sans.scss";
+@import "_raleway.scss";
+@import "_roboto.scss";
+@import "_source-sans-pro.scss";
