--- a/core/font-settings/_open-sans-condensed.scss
+++ b/core/font-settings/_open-sans-condensed.scss
@@ -1,5 +1,5 @@
 $font-settings: (
-    adjust-ratio: (10/84),
+    adjust-ratio: (8/72),
     manual-adjust: (
         12: 1,
         17: 1,
@@ -8,16 +8,15 @@ $font-settings: (
         33: 1,
         35: 1,
         36: 1,
-        37: 1,
         40: 1,
         43: 1,
         48: 1,
         53: 1,
         58: 1,
-        59: 1,
         61: 1,
         64: 1,
+        71: 1,
     )
 );
 
-@include register-font('Open Sans', $font-settings);
+@include register-font('Open Sans Condensed', $font-settings);
