--- a/examples/examples.scss
+++ b/examples/examples.scss
@@ -1,4 +1,15 @@
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px
+);
+
+$visual-grid: false;
 @import '../core/base-base';
+@import 'bootstrap/scss/mixins/breakpoints';
+@import 'cssgrid/src/grid12';
 @include prep_root();
 $test-font: 'Source Sans Pro';
 
@@ -20,4 +31,109 @@ $max-size: 6 * strip-unit($baseline-height);
     .base-base-#{$i} {
         @include base-base($i * 1px, $test-font);
     }
+}
+
+
+
+/// This is the text styles for the compare page'
+h1,
+h2,
+p,
+cite,
+blockquote {
+    font-family: $test-font;
+    line-height: 1.5;
+    margin: 0;
+    font-weight: 400;
+}
+
+h1{
+    font-size: 40px;
+}
+h2{
+    font-size: 28px;
+}
+cite{
+    font-size: 20px;
+    display: block;
+
+    + p{
+        font-size: 18px;
+    }
+}
+
+p{
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+blockquote{
+    margin: 0;
+}
+
+// positioning for compare section
+.compare{
+    padding: 0 20px;
+    max-width: 1400px;
+    margin: 0 auto;
+}
+
+.compare__intro{
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.compare__intro,
+.compare__quote{
+    @include margin-trailer(1);
+}
+
+.compare__cards{
+    display: grid;
+}
+
+.compare__quote-aside{
+    @include padding-leader(1)
+}
+
+.card{
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+    border-radius: 3px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    img{
+        width: 100%;
+        height: auto;
+    }
+}
+
+.card__content{
+    flex-grow: 1;
+    padding-left: 20px;
+    padding-right: 20px;
+    @include padding-leader(1);
+    @include padding-trailer(2);
+    display: flex;
+    flex-direction: column;
+    p{
+        flex-grow: 1;
+    }
+    a{
+        background-color: #333;
+        color: white;
+        text-decoration: none;
+        display: inline-block;
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+    a.base-base-14{
+        @include margin-leader(1);        
+        @include padding-leader(0.5);
+        @include padding-trailer(0.5);
+    }
+}
+
+.btn{
+    padding: 12px;
 }
