--- a/core/font-settings/_all.scss
+++ b/core/font-settings/_all.scss
@@ -2,6 +2,7 @@
 
 @import "_lato.scss";
 @import "_montserrat.scss";
+@import "_noto-sans.scss";
 @import "_open-sans-condensed.scss";
 @import "_open-sans.scss";
 @import "_oswald.scss";
